minor fixes to spacing

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -21,3 +21,7 @@
     margin-bottom: 20px;
     margin-right: 20px;
 }
+
+.AboutMargin {
+    margin: 2.5rem !important;
+}
