--- a/src/components/search/SearchBar.css
+++ b/src/components/search/SearchBar.css
@@ -1,5 +1,6 @@
 .SearchBar {
   width: 100vh;
+  margin-bottom: 1.1rem;
 }
 
 .ButtonMargin {
