--- a/src/components/search/filters/Radius.css
+++ b/src/components/search/filters/Radius.css
@@ -5,3 +5,7 @@
 .RadiusMargin {
   margin: 0;
 }
+
+.MarginRadiusFix {
+  margin: 1rem !important;
+}
